# bio-experiments

./: bio-experiments.cabal  stack.yaml
src/Bio/Data/: Types.hs
src/Bio/Data/Experiment/: Parser.hs  Types.hs  Utils.hs
src/Bio/Data/Experiment/Types/: Internal.hs
