name:                bio-experiments
version:             0.1.0
synopsis:            Types for storing metadata of experiments
description:         Please see README.md
homepage:
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           2016 Kai Zhang
category:            Bio
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:

library
  hs-source-dirs:      src
  exposed-modules:
    Bio.Data.Experiment.Types
    Bio.Data.Experiment.Utils

  build-depends:
      base >= 4.0 && < 5
    , aeson
    , bytestring
    , cryptohash
    , data-ordlist
    , text
    , containers
    , lens

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kaizhang/bio-experiments.git
